[package]
name = "capcheck"
version = "0.1.0"
authors = ["a3r <arrrght@gmail.com>"]
edition = "2018"

[dependencies]
#hyper = "0.12"
reqwest = "0.9.14"
prometheus = "0.5"
log = "0.4"
env_logger = "0.6"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = false
overflow-checks = false
